# subdomain-brute

./: 1.txt  Cargo.toml  README.md
src/: DNS_query.rs  dns_query.rs  file_read.rs  main.rs
