[package]
name = "subdomains_brute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-client = "*"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3"
trust-dns-proto="*"
clap = "2.33"